# monorepo_hacktheblock

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  HANDOFF-DANIEL.md  README.md  TROUBLESHOOTING.md  vercel.json
cli/: Cargo.toml
cli/src/: main.rs
contracts/: Cargo.toml  DEPLOYMENT_STATUS.md  README.md  justfile
contracts/escrow-verifier/: Cargo.toml
contracts/escrow-verifier/src/: layout.rs  lib.rs  proof.rs  verifier.rs
contracts/specs/: escrow-data-v1.md  fixtures.md  journal-v1-real.md  journal-v1.md  proof-verification-interface.md
contracts/zk-host/: Cargo.toml
contracts/zk-host/src/: main.rs
docs/: WALLET_SETUP.md
escrow/src/: lib.rs
front-end/: .env.example  .gitignore  README.md  package-lock.json  package.json  tailwind.config.ts
front-end/app/: globals.css  layout.tsx  page.tsx  template.tsx
front-end/components/: AnimatedCounter.tsx  AuroraBackground.tsx  ClickRipple.tsx  CodeSnippetCard.tsx  ComputingValue.tsx  CustomCursor.tsx  FeatureCard.tsx  FullpageScroll.tsx  GenerativeOptionCard.tsx  GenerativeShowcase.tsx  GreeksDashboard.tsx  HeroSection.tsx  HeroSphere3D.tsx  HexRain.tsx  LandingSections.tsx  MagneticButton.tsx  Meteors.tsx  Navbar.tsx  OptionBoardCard.tsx  PayoffSurface3D.tsx  QuoteCountdown.tsx  ScrollProgress.tsx  SmoothScrollProvider.tsx  SuccessRipple.tsx  ThemeToggle.tsx  TxParticleField.tsx  WalletConnectPanel.tsx
front-end/contexts/: WalletContext.tsx
front-end/types/: contracts.ts  intent.ts  xrpl-connect.d.ts
skills/r-u-satoshi/: SKILL.md
skills/xrpl-zk-escrow/: SKILL.md
tests/: e2e.rs
(+28 files in other folders)
