[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
bytemuck = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
hex = "0.4"
risc0-zkvm = { version = "3.0.4", features = ["prove"] }
example-proof-builder = { path = "../zkvm/example-proof" }
serde_json = { workspace = true }
risc0-verifier-xrpl-wasm = { workspace = true, features = ["std"] }
boundless-market = "1.3.3"
alloy = { version = "1.7.3", features = ["signers"] }
url = "2.5.8"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }
