[package]
name = "verafi-zk-host"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
bytemuck = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
hex = "0.4"
risc0-zkvm = { version = "3.0.4", features = ["prove"] }
serde_json = { workspace = true }
risc0-verifier-xrpl-wasm = { workspace = true, features = ["std"] }
verafi-pricer-builder = { path = "../zkvm/verafi-pricer" }
